<resources>
    <string name="app_name">Budgetone</string>

    <string name="title_section_dashboard">Dashboard</string>
    <string name="title_section_categories">Categories</string>
    <string name="title_section_chart">Chart</string>
    <string name="title_section_history">History</string>
    <string name="title_section_goals">Goals</string>
    <string name="title_activity_select_categories">Select Categories</string>
    <string name="title_activity_add_income">Add Income</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cancel">Cancel</string>
    <string name="save_category_dialog_title">Save Category</string>
    <string name="btn_save_category">Save Category</string>
    <string name="save_category_dialog_cancel_btn">Cancel</string>
    <string name="add_income">Add Income</string>
    <string name="add_income_hint1">2500 @salary</string>
    <string name="add_income_success">Income added</string>

    <!-- menus -->
    <string name="action_save">Save</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_transaction">Add Transaction</string>
    <string name="action_add_target">Add Goal</string>

    <!-- errors -->
    <string name="err_invalid_income_input">Invalid input</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_copy_last_month_budget">CopyLastMonthBudgetActivity</string>
    <string name="title_activity_budget_configuration">Configure Budget</string>
    <string name="title_activity_add_target">Add New Target</string>
    <string name="remove_goal">Remove Goal</string>
    <string name="add_subcategory">Add Subcategory</string>
    <string name="history_type_expenses">Expenses</string>
    <string name="history_type_income">Income</string>
    <string name="txt_history_filter_year">Year:</string>
    <string name="txt_history_filter_month">Month:</string>
    <string name="txt_history_filter_category">Category/Goal:</string>
    <string name="txt_history_filter_subcategory">Subcategory:</string>
    <string name="budget_configuration_welcome_toast">Use volume keys for fine tuning!</string>
</resources>
