<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/search_panel"
    android:background="#ccc"
    android:animateLayoutChanges="true"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:paddingRight="8dp">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radioGroup"
                android:layout_marginBottom="8dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_type_expenses"
                android:id="@+id/rbExpenses"
                android:layout_weight=".5"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_type_income"
                android:id="@+id/rbIncome"
                android:layout_weight=".5" />

            </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_history_filter_year"
            android:id="@+id/tv_year"
            android:layout_weight=".25" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_year"
            android:spinnerMode="dropdown"
            android:layout_weight=".25"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_history_filter_month"
            android:id="@+id/tv_month"
            android:layout_weight=".25" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_month"
            android:layout_weight=".25"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expenses_panel"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_history_filter_category"
            android:id="@+id/tv_category"
            android:layout_weight=".5"
            android:layout_marginRight="5dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_category"
            android:layout_weight=".5" />

    </LinearLayout>

</LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:animateLayoutChanges="true"/>
</LinearLayout>